cupt2 (2.0.0~alpha2~) UNRELEASED; urgency=low

  * lib:
    - hashsums:
      - 'getStringHash': speed-up.
    - cache:
      - Pre-parsing index files: really discard packages with broken package
        names.
      - 'operator=': forbidden now.
    - file:
      - 'getBlock': renamed to 'getRecord'.
    - common:
      - 'exception': renamed to 'Exception'.
    - system/resolvers/native:
      - Don't add new reason to an action which received unsatisfied soft
        dependency penalty.
    - config:
      - 'getNumber': renamed to 'getInteger'.
    - cache/version:
      - 'AvailableAsEntry': renamed to 'Source'.
      - 'availableAs': renamed to 'sources'.
    - download/progress:
      - 'progress': fixed nasty bug with wrong computing total download
        size when at least one download has an unknown size.
    - Link with 'rt'.
    - cache/relation:
      - 'unarchitectureRelationLine': moved to ArchitecturedRelationLine class
        and renamed to 'toRelationLine'.
      - 'ArchitecturedRelationExpression::getHashString': doesn't exist,
        removed its declaration.
    - cache/package:
      - 'operator=': forbidden now.
      - copy constructor: forbidden now.
  * doc:
    - examples:
      - Added 'show-upgradeable' example.

 -- Eugene V. Lyubimkin <jackyf@debian.org>  Sun, 26 Sep 2010 13:20:47 +0300

cupt2 (2.0.0~alpha1) UNRELEASED; urgency=low

  * Re-implemented in C++ (and subset of C++0x).

  * console:
    - The '--installed-only' option now works under 'shell' command.
    - The 'config-dump' subcommand no longer accepts arguments.
  * lib:
    - cache/sourceversion:
      - Support multiple tarballs.
    - config:
      - Implemented issuing detailed error messages when facing syntax errors
        in configuration files.
    - cache:
      - Implemented refusing expired Release files.
  * downloadmethods:
    - wget:
      - Implemented.

 -- Eugene V. Lyubimkin <jackyf@debian.org>  Sun, 26 Sep 2010 12:31:09 +0300
