@@ -898,7 +898,7 @@ ssize_t CacheImpl::getPin(const shared_ptr< const Version >& version, const stri
 pair< string, string > CacheImpl::getLocalizedDescriptions(const shared_ptr< const BinaryVersion >& version) const
 {
 	string source = version->shortDescription + "\n" + version->longDescription;
-	string sourceHash = HashSums::getStringHash(HashSums::MD5, source);
+	string sourceHash = HashSums::getHashOfString(HashSums::MD5, source);
 
 	auto it = translations.find(sourceHash);
 	if (it != translations.end())
