@@ -3,6 +3,7 @@ cupt2 (2.0.0~alpha2~) UNRELEASED; urgency=low
   * lib:
     - hashsums:
       - 'getStringHash': speed-up.
+      - 'getStringHash': renamed to 'getHashOfString'.
     - cache:
       - Pre-parsing index files: really discard packages with broken package
         names.
